@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -272,7 +272,7 @@ private String[] computeDocumentNames(String[] onDiskNames, int[] positions, Sim
 				newDocNames[count++] = (String) added[i];
 		Util.sort(newDocNames);
 		for (int i = 0, l = newDocNames.length; i < l; i++)
-			indexedDocuments.put(newDocNames[i], new Integer(i));
+			indexedDocuments.put(newDocNames[i], Integer.valueOf(i));
 		return newDocNames;
 	}
 
@@ -316,7 +316,7 @@ private String[] computeDocumentNames(String[] onDiskNames, int[] positions, Sim
 		Util.sort(newDocNames);
 		for (int i = 0, l = newDocNames.length; i < l; i++)
 			if (indexedDocuments.containsKey(newDocNames[i]))
-				indexedDocuments.put(newDocNames[i], new Integer(i)); // remember the position for each new document
+				indexedDocuments.put(newDocNames[i], Integer.valueOf(i)); // remember the position for each new document
 	}
 
 	// need to be able to look up an old position (ref# from a ref[]) and map it to its new position
@@ -331,7 +331,7 @@ private String[] computeDocumentNames(String[] onDiskNames, int[] positions, Sim
 			case RE_INDEXED :
 				String newName = newDocNames[++count];
 				if (newName.equals(onDiskNames[i])) {
-					indexedDocuments.put(newName, new Integer(count)); // the reindexed docName that was at position i is now at position count
+					indexedDocuments.put(newName, Integer.valueOf(count)); // the reindexed docName that was at position i is now at position count
 					i++;
 				}
 				break;
@@ -692,7 +692,7 @@ private synchronized HashtableOfObject readCategoryTable(char[] categoryName, bo
 						firstOffset = arrayOffset;
 					matchingWords[count++] = word;
 				}
-				categoryTable.putUnsafely(word, new Integer(arrayOffset)); // offset to array in the file
+				categoryTable.putUnsafely(word, Integer.valueOf(arrayOffset)); // offset to array in the file
 			}
 		}
 		this.categoryTables.put(INTERNED_CATEGORY_NAMES.get(categoryName), categoryTable);
@@ -1108,7 +1108,7 @@ private void writeCategoryTable(char[] categoryName, HashtableOfObject wordsToDo
 				o = values[i] = ((IntList) values[i]).asArray();
 			int[] documentNumbers = (int[]) o;
 			if (documentNumbers.length >= largeArraySize) {
-				values[i] = new Integer(this.streamEnd);
+				values[i] = Integer.valueOf(this.streamEnd);
 				writeDocumentNumbers(documentNumbers, stream);
 			}
 		}
